FIX: Footer width on mobile view

--- a/footer.css
+++ b/footer.css
@@ -1,15 +1,6 @@
 #footer-container {
-    width: 100%;
-}
+    background-color: aqua;
 
-#footer-1-container {
-    background-color: rgb(49, 49, 49);
-    height: 100px;
-}
-
-#footer-2-container {
-    background-color: rgb(87, 87, 87);
-    height: 150px;
 }
 
 #footer-container h2 {
@@ -17,9 +8,28 @@
     color: #ffffff;
 }
 
-.footer {
+#footer-1-container {
+    background-color: rgb(49, 49, 49);
+/* width: 100%; */
+}
+
+#footer-2-container {
+    background-color: rgb(87, 87, 87);
+/* width: 100%; */
+}
+
+.footer-1 {
+    margin: 0 auto;
+    height: 100px;
+    width: 1200px;
+
+}
+
+.footer-2 {
     width: 1200px;
     margin: 0 auto;
+    height: 150px;
+
 }
 
 .footer-link {
